# ansel

./: .gitmodules  AGENTS.md  AUTHORS  CMakeLists.txt  ConfigureChecks.cmake  DefineOptions.cmake  README.md  build.sh
.ci/: Brewfile  ci-script-appimage.sh  ci-script-mac.sh  ci-script-windows.sh  ci-script.sh
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  config.yml
.github/workflows/: ci.yml  docker-image.yml  docs.yml  flatpak-nightly.yml  lin-nightly.yml  mac-nightly.yml  manualrun.yml  matrix.yml  win-nightly.yml
cmake/: ansel-packaging.cmake  compiler-versions.cmake  march-mtune.cmake  windows-macros.cmake
cmake/modules/: FindCURL.cmake  FindColord.cmake  FindColordGTK.cmake  FindExiv2.cmake  FindICU.cmake  FindLCMS2.cmake  FindLensFun.cmake  FindLibSoup.cmake  FindLibsecret.cmake  FindOSMGpsMap.cmake  FindOpenEXR.cmake  FindOpenMP.cmake  FindWebP.cmake  LibFindMacros.cmake
data/: CMakeLists.txt  anselconfig.xml.in
data/kernels/: basic.cl  bspline.cl  channelmixer.cl  crystgrain.cl  demosaic_ppg.cl  demosaic_rcd.cl  demosaic_vng.cl  diffuse.cl  extended.cl  programs.conf
data/themes/: ansel.css
doc/: Doxyfile  footer.html  reorganisation.md  resizing-scaling.md
packaging/: install-deps-arch.sh  install-deps-fedora.sh  install-deps-macos.sh  install-deps-suse.sh  install-deps-ubuntu.sh  install-deps-windows-msys2.sh
packaging/flatpak/: photos.ansel.ansel.json
packaging/macosx/: 2_build_hb_ansel_custom.sh  4_make_hb_ansel_dmg.sh  BUILD.txt
po/: zh_CN.po
src/: CMakeLists.txt  config.cmake.h  is_supported_platform.h  main.c
src/bauhaus/: bauhaus.c  bauhaus.h
src/chart/: colorchart.c  dtcairo.c  main.c  pfm.c  thinplate.c  tonecurve.c
src/cli/: main.c
src/cltest/: main.c
src/cmstest/: CMakeLists.txt  main.c
src/common/: atomic.c  atomic.h  bilateral.c  bilateralcl.c  box_filters.c  bspline.h  cache.c  calculator.c  chromatic_adaptation.h  collection.c  color_picker.c  colorchecker.h  colorequal_shared.c  colorequal_shared.h  colorlabels.c  colorspaces.c  colorspaces.h  colorspaces_inline_conversions.h  cups_print.c  curve_tools.c  darktable.c  darktable.h  database.c  datetime.c  dbus.c  deprecations.h  distance_transform.h  dlopencl.c  dtpthread.c  dtpthread.h  dwt.c  dynload.c  eaw.c  eigf.h  exif.cc  fast_guided_filter.h  file_location.c  film.c  focus.h  focus_peaking.c  (+89 more)
src/control/: conf.c  control.c  crawler.c  jobs.c  jobs.h  progress.c  signal.c  signal.h
src/develop/: blend.c  blend.h  blend_gui.c  dev_history.c  dev_history.h  dev_pixelpipe.c  dev_pixelpipe.h  develop.c  develop.h  format.c  format.h  imageop.c  imageop.h  imageop_gui.c  imageop_gui.h  imageop_math.c  imageop_math.h  lightroom.c  lightroom.h  masks.h  noise_generator.h  openmp_maths.h  pixelpipe.c  pixelpipe.h  pixelpipe_cache.c  pixelpipe_cache.h  pixelpipe_cpu.c  pixelpipe_cpu.h  pixelpipe_gpu.c  pixelpipe_gpu.h  pixelpipe_hb.c  pixelpipe_hb.h  pixelpipe_process.h  pixelpipe_raster_masks.c  tiling.c  (+2 more)
tests/: cache.c  variables.c
tools/: benchmark_darkroom_rc.sh  collect_opencl_artifacts.sh  find-null-checks.py
tools/noise/: CMakeLists.txt  noiseprofile.c
(+258 files in other folders)
